Fix too low specifity
Approach A: not coupled with AEM Grid.

--- a/src/components/container/_container.scss
+++ b/src/components/container/_container.scss
@@ -14,7 +14,7 @@ Make general max-width 1920px
   max-width: 1920px;
 }
 
-.full-width {
+.full-width.full-width.full-width.full-width {
   left: 50%;
   margin-left: -50vw;
   max-width: 100vw;
